tests/ui/deduplicate-diagnostics.deduplicate.stderr
error[E0452]: malformed lint attribute input
  --> $DIR/deduplicate-diagnostics.rs:8:8
   |
LL | #[deny("literal")]
   |        ^^^^^^^^^ bad attribute argument

error: cannot find derive macro `Unresolved`
  --> $DIR/deduplicate-diagnostics.rs:4:10
   |
LL | #[derive(Unresolved)]
   |          ^^^^^^^^^^ not found in this scope

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0452`.
